add rapid trajectory

--- a/src/uav_offboard_fsm/CMakeLists.txt
+++ b/src/uav_offboard_fsm/CMakeLists.txt
@@ -56,7 +56,11 @@ install(TARGETS
   uav_keyboard_control_node
   DESTINATION lib/${PROJECT_NAME})
 
-install(DIRECTORY include/
-  DESTINATION include)
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/include")
+  install(
+    DIRECTORY include/
+    DESTINATION include
+  )
+endif()
 
 ament_package()
